--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "src/brendan_ur5e/src/scripts/pydmp"]
 	path = src/brendan_ur5e/src/scripts/pydmp
 	url = https://github.com/brenhertel/pydmps.git
+[submodule "realsense-ros"]
+	path = realsense-ros
+	url = https://github.com/IntelRealSense/realsense-ros.git
+[submodule "ddynamic_reconfigure"]
+	path = ddynamic_reconfigure
+	url = https://github.com/brenhertel/ddynamic_reconfigure
