--- a/brendan_ur5e/CMakeLists.txt
+++ b/brendan_ur5e/CMakeLists.txt
@@ -117,9 +117,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES brendan_ur5e
-#   CATKIN DEPENDS roscpp rospy std_msgs message_runtime
+  INCLUDE_DIRS include
+  LIBRARIES brendan_ur5e
+  CATKIN DEPENDS roscpp rospy std_msgs message_runtime
 #  DEPENDS system_lib
 )
 
